--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4935,10 +4935,10 @@ input[type=button].btn-block {
 
 .navbar-brand {
     display: inline-block;
-    padding-top: .0125rem;
-    padding-bottom: .0125rem;
+    padding-top: 0;
+    padding-bottom: 0;
     margin-right: 1rem;
-    font-size: 1.25rem;
+    font-size: 2.25rem;
     line-height: inherit;
     white-space: nowrap
 }
