--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4911,7 +4911,7 @@ input[type=button].btn-block {
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    padding: .5rem 1rem
+    padding: .25rem 0.25rem
 }
 
 .navbar>.container,
@@ -4938,7 +4938,7 @@ input[type=button].btn-block {
     padding-top: 0;
     padding-bottom: 0;
     margin-right: 1rem;
-    font-size: 1.55rem;
+    font-size: 1.7rem;
     line-height: inherit;
     white-space: nowrap
 }
@@ -18024,7 +18024,7 @@ html body .md-typeset .headerlink {
     .td-navbar .td-navbar-nav-scroll {
         max-width: 100%;
         height: 2.5rem;
-        margin-top: .25rem;
+        margin-top: -0.5rem;
         overflow: hidden;
         font-size: .875rem
     }
