--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,9 @@
   <div class="container-fluid mx-sm-5">
     <div class="row">
       <div class="col-12 text-center py-1 order-sm-1">
-        <small class="text-white">© 2020-{{ 'now' | date: "%Y" }} {{ site.author }} All Rights Reserved</small>
+        <small class="text-lime">© 2020-{{ 'now' | date: "%Y" }} {{ site.author }}</small>
+        <br>
+        <small class="text-white">Margin trading products are complex instruments and come with a high risk of losing money rapidly due to leverage.</small>
         {% if site.privacy %}<small class="ml-1"><a href="{{ site.privacy }}" target="_blank">Privacy Policy</a></small>{% endif %}
       </div>
     </div>
