--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
   {% endif %}
   <body class="td-section">
     {% include header.html %}
+    {% include helpbot.html %}
     <div class="container-fluid td-outer">
       <div class="td-main">
         <div class="row flex-xl-nowrap">
